# dingdong_sonos

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/scripts/: release.py
.github/workflows/: publish-pypi.yml
dingdong_sonos/: main.py
dingdong_sonos/media/: school-bell-sound.mov
